Import CV/pubs update

--- a/templates/pubsfrag.html
+++ b/templates/pubsfrag.html
@@ -1,7 +1,7 @@
 
 
 <p>Below is an exhaustive list of my publications, updated as of
-Aug 2, 2021.
+Apr 1, 2022.
 First-author works have their <span style="font-weight: bold">titles in
 bold</span>; refereed works are marked with a guillemet (»). The names of
 directly-supervised students are <u>underlined</u>.
@@ -11,7 +11,7 @@ My <a href="/~peter/cv/">full CV</a> is also online as
 is <a href="/~peter/dissertation/">my dissertation</a>.
 <!-- --> <a href="http://labs.adsabs.harvard.edu/adsabs">ADS</a> citation counts are shown in square brackets and were last
 updated around Aug 2, 2021. As of then, I was an author on
-100 refereed publications (12 as first author), my
+102 refereed publications (12 as first author), my
 <i>h</i>-index was 38 and my refereed publications had 6724
 citations.
 <!-- -->
@@ -58,9 +58,15 @@ citations.
 <li><a href="http://arxiv.org/abs/2102.01709">preprint</a></li>
 </ul>
 </td></tr>
-<tr><td>2021 Feb</td><td></td><td class="pwpubs_tauth"><p class="pwpubs_title">A Late-Time Galaxy-Targeted Search for the Radio Counterpart of GW190814</p> <p><span class="pwpubs_auth">Alexander et al.</span> • AAS submitted</p></td><td><ul>
+<tr><td>2021 Feb</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">A Late-Time Galaxy-Targeted Search for the Radio Counterpart of GW190814</p> <p><span class="pwpubs_auth">Alexander et al.</span> • ApJ in press</p></td><td><ul>
 <li><a href="http://adsabs.harvard.edu/abs/2021arXiv210208957A">abstract</a></li>
 <li><a href="http://arxiv.org/abs/2102.08957">preprint</a></li>
+</ul>
+</td></tr>
+<tr><td>2021 Nov</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Automated Detection of Antenna Malfunctions in Large-N Interferometers: A Case Study with the Hydrogen Epoch of Reionization Array</p> <p><span class="pwpubs_auth">Storer et al.</span> • Radio Science e2021RS007376</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2021arXiv210912733S">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2109.12733">preprint</a></li>
+<li><a href="http://dx.doi.org/10.1029/2021RS007376">official</a></li>
 </ul>
 </td></tr>
 <tr><td>2021 May</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Late-Time Radio and Millimeter Observations of Superluminous Supernovae and Long Gamma Ray Bursts: Implications for Obscured Star Formation, Central Engines, and Fast Radio Bursts</p> <p><span class="pwpubs_auth">Eftekhari et al.</span> • ApJ 912 21</p></td><td><ul>
