templates: update worklog bits

--- a/templates/cvfrag.html
+++ b/templates/cvfrag.html
@@ -1,5 +1,5 @@
 <p>Updated
-Apr 1, 2022.
+Aug 19, 2022.
 </p>
 
 <h3>Contact Information</h3>
@@ -103,17 +103,17 @@ Cambridge, MA 01238
 
 
 <h3>Summary of Publications</h3>
-<p>Since 2004 I have been an author on 102 refereed publications,
+<p>Since 2004 I have been an author on 110 refereed publications,
   12 as first author. As of around
-  Aug&nbsp;2,&nbsp;2021, my refereed publications had 6724
-  citations and my <i>h</i>-index was 38, according to
+  Aug&nbsp;19,&nbsp;2022, my refereed publications had 8608
+  citations and my <i>h</i>-index was 40, according to
   <a href="http://adsabs.harvard.edu/">NASA ADS</a>. An exhaustive list of all
   of my publications may be found <a href="../pubs/">here</a>.</p>
 
 
 <h3>Summary of Professional Talks</h3>
-<p>Since 2010 I have given 73 professional talks, 17 of them
-  invited. Venues include 29 conferences and institutions such as
+<p>Since 2010 I have given 78 professional talks, 18 of them
+  invited. Venues include 33 conferences and institutions such as
   AMNH, Cornell, Harvard, Monash University, NASA Ames, Northwestern, Penn
   State, STScI, UC&nbsp;Berkeley, and UC&nbsp;Santa Cruz. An exhaustive list
   of talks may be found <a href="#alltalks">below</a>.</p>
@@ -191,6 +191,11 @@ Cambridge, MA 01238
 <table class="pwcv">
 <col class="pwcv_spec" /> <col class="pwcv_content" />
 
+<tr><td>2022 Jul</td><td><i>TUG 2022 (virtual)</i><br>“The Tectonic Project: Envisioning A 21st-Century TeX Experience”</td></tr>
+<tr><td>2022 May</td><td><i>At ‘Seeing the Future: Of the Universe, Data, Learning, and Digital Scholarship’ (New Castle, NH)</i><br>“Showcasing Astronomical Data and Knowledge: AAS WorldWide Telescope”</td></tr>
+<tr><td>2022 Jan</td><td><i>‘New Year Lectures from Astronomical Software Masters’ series (virtual)</i><br>“The WorldWide Telescope: Past, Present, and Future”</td></tr>
+<tr><td>2021 Dec</td><td><i>At AGU 2021 (New Orleans / virtual)</i><br>“Ultracool Magnetospheres: The Radio Astronomical Perspective on Extrasolar Energetic Charged Particles”</td></tr>
+<tr><td>2021 Oct</td><td><i>At ADASS31 (Cape Town, SA / virtual)</i><br>“Interactively Visualizing Massive Images and Catalogs in Jupyter with AAS WorldWide Telescope”</td></tr>
 <tr><td>2021 Jan</td><td><i>Radio Camera Initiative seminar series</i><br>“The Craft and Duty of Scientific Software Engineering”</td></tr>
 <tr><td>2021 Jan</td><td><i>At AAS Winter Meeting #237 (virtual)</i><br>“Making the Most of the AAS WorldWide Telescope”</td></tr>
 <tr><td>2020 Dec</td><td><i>At Unified Astronomy Thesaurus webinar</i><br>“UAT as a Critical Element in AAS Author Submissions”</td></tr>
