--- a/templates/pubsfrag.html
+++ b/templates/pubsfrag.html
@@ -1,7 +1,7 @@
 
 
 <p>Below is an exhaustive list of my publications, updated as of
-Apr 1, 2022.
+Aug 19, 2022.
 First-author works have their <span style="font-weight: bold">titles in
 bold</span>; refereed works are marked with a guillemet (»). The names of
 directly-supervised students are <u>underlined</u>.
@@ -10,9 +10,9 @@ directly-supervised students are <u>underlined</u>.
 My <a href="/~peter/cv/">full CV</a> is also online as
 is <a href="/~peter/dissertation/">my dissertation</a>.
 <!-- --> <a href="http://labs.adsabs.harvard.edu/adsabs">ADS</a> citation counts are shown in square brackets and were last
-updated around Aug 2, 2021. As of then, I was an author on
-102 refereed publications (12 as first author), my
-<i>h</i>-index was 38 and my refereed publications had 6724
+updated around Aug 19, 2022. As of then, I was an author on
+110 refereed publications (12 as first author), my
+<i>h</i>-index was 40 and my refereed publications had 8608
 citations.
 <!-- -->
 </p>
@@ -22,51 +22,110 @@ citations.
 
 <table id="pwpubs">
 <col id="pwpubs_date" /> <col id="pwpubs_ref" /> <col id="pwpubs_tauth" /> <col id="pwpubs_links" />
-<tr><td>2021 Jul</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Effects of model incompleteness on the drift-scan calibration of radio telescopes</p> <p><span class="pwpubs_auth">Gehlot et al.</span> • MNRAS, in press</p></td><td><ul>
+<tr><td>2022 Jun</td><td></td><td class="pwpubs_tauth"><p class="pwpubs_title">The Astropy Project: Sustaining and Growing a Community-oriented Open-source Project and the Latest Major Release (v5.0) of the Core Package</p> <p><span class="pwpubs_auth">Astropy Collaboration et al.</span> • AAS Journals submitted</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2022arXiv220614220T">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2206.14220">preprint</a></li>
+</ul>
+</td></tr>
+<tr><td>2022 Apr</td><td></td><td class="pwpubs_tauth"><p class="pwpubs_title">Direct Optimal Mapping for 21cm Cosmology: A Demonstration with the Hydrogen Epoch of Reionization Array</p> <p><span class="pwpubs_auth">Xu et al.</span> • AAS Journals submitted</p></td><td><ul>
 <li><a href="http://adsabs.harvard.edu/abs/2021MNRAS.tmp.1846G">abstract</a></li>
 <li><a href="http://arxiv.org/abs/2104.12240">preprint</a></li>
 <li><a href="http://dx.doi.org/10.1093/mnras/stab2072">official</a></li>
 </ul>
 </td></tr>
-<tr><td>2021 Jun</td><td></td><td class="pwpubs_tauth"><p class="pwpubs_title">A Pilot Radio Search for Magnetic Activity in Directly Imaged Exoplanets</p> <p><span class="pwpubs_auth">Cendes, PKGW, Berger</span> • AAS submitted</p></td><td><ul>
-<li><a href="http://adsabs.harvard.edu/abs/2021arXiv210614994C">abstract</a></li>
-<li><a href="http://arxiv.org/abs/2106.14994">preprint</a></li>
+<tr><td>2022 Aug</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Extragalactic Millimeter Transients in the Era of Next-generation CMB Surveys</p> <p><span class="pwpubs_auth">Eftekhari et al.</span> • ApJ 935 16</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2022ApJ...935...16E">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2110.05494">preprint</a></li>
+<li><a href="http://dx.doi.org/10.3847/1538-4357/ac7ce8">official</a></li>
 </ul>
 </td></tr>
-<tr><td>2021 Apr</td><td></td><td class="pwpubs_tauth"><p class="pwpubs_title">Validation of the HERA Phase I Epoch of Reionization 21 cm Power Spectrum Software Pipeline</p> <p><span class="pwpubs_auth">Aguirre et al.</span> • AAS submitted</p></td><td><ul>
-<li><a href="http://adsabs.harvard.edu/abs/2021arXiv210409547A">abstract</a></li>
-<li><a href="http://arxiv.org/abs/2104.09547">preprint</a></li>
+<tr><td>2022 Aug</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">The First Short GRB Millimeter Afterglow: The Wide-angled Jet of the Extremely Energetic SGRB 211106A</p> <p><span class="pwpubs_auth">Laskar et al.</span> • ApJL 935 L11</p></td><td><ul>
+<li><a href="http://arxiv.org/abs/2205.03419">preprint</a></li>
+<li><a href="http://dx.doi.org/10.3847/2041-8213/ac8421">official</a></li>
 </ul>
 </td></tr>
-<tr><td>2021 Apr</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">A Real Time Processing System for Big Data in Astronomy: Applications to HERA</p> <p><span class="pwpubs_auth">La Plante et al.</span> • Astronomy and Computing, in press</p></td><td><ul>
-<li><a href="http://adsabs.harvard.edu/abs/2021arXiv210403990L">abstract</a></li>
-<li><a href="http://arxiv.org/abs/2104.03990">preprint</a></li>
+<tr><td>2022 Apr</td><td></td><td class="pwpubs_tauth"><p class="pwpubs_title">Building the UAT as a Community</p> <p><span class="pwpubs_auth">Accomazzi et al.</span> • BAAS 54(2) 019</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2022BAAS...54b.019A">abstract</a></li>
+<li><a href="http://dx.doi.org/10.3847/25c2cfeb.c71aa342">official</a></li>
 </ul>
 </td></tr>
-<tr><td>2021 Mar</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Methods of Error Estimation for Delay Power Spectra in 21 cm Cosmology</p> <p><span class="pwpubs_auth">Tan et al.</span> • ApJ in press</p></td><td><ul>
-<li><a href="http://adsabs.harvard.edu/abs/2021arXiv210309941T">abstract</a></li>
-<li><a href="http://arxiv.org/abs/2103.09941">preprint</a></li>
+<tr><td>2022 Feb</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">First Results from HERA Phase I: Upper Limits on the Epoch of Reionization 21 cm Power Spectrum</p> <p><span class="pwpubs_auth">Abdurashidova et al.</span> • ApJ 925 221</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2022ApJ...925..221A">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2108.02263">preprint</a></li>
+<li><a href="http://dx.doi.org/10.3847/1538-4357/ac1c78">official</a></li>
 </ul>
 </td></tr>
-<tr><td>2021 Mar</td><td></td><td class="pwpubs_tauth"><p class="pwpubs_title">Radio Observations of an Ordinary Outflow from the Tidal Disruption Event AT2019dsg</p> <p><span class="pwpubs_auth">Cendes et al.</span> • AAS submitted</p></td><td><ul>
-<li><a href="http://adsabs.harvard.edu/abs/2021arXiv210306299C">abstract</a></li>
-<li><a href="http://arxiv.org/abs/2103.06299">preprint</a></li>
-</ul>
-</td></tr>
-<tr><td>2021 Feb</td><td></td><td class="pwpubs_tauth"><p class="pwpubs_title">The Galactic Faraday rotation sky 2020</p> <p><span class="pwpubs_auth">Hutschenreuter et al.</span> • A&amp;A submitted</p></td><td><ul>
-<li><a href="http://adsabs.harvard.edu/abs/2021arXiv210201709H">abstract</a></li>
-<li><a href="http://arxiv.org/abs/2102.01709">preprint</a></li>
-</ul>
-</td></tr>
-<tr><td>2021 Feb</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">A Late-Time Galaxy-Targeted Search for the Radio Counterpart of GW190814</p> <p><span class="pwpubs_auth">Alexander et al.</span> • ApJ in press</p></td><td><ul>
-<li><a href="http://adsabs.harvard.edu/abs/2021arXiv210208957A">abstract</a></li>
-<li><a href="http://arxiv.org/abs/2102.08957">preprint</a></li>
-</ul>
-</td></tr>
-<tr><td>2021 Nov</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Automated Detection of Antenna Malfunctions in Large-N Interferometers: A Case Study with the Hydrogen Epoch of Reionization Array</p> <p><span class="pwpubs_auth">Storer et al.</span> • Radio Science e2021RS007376</p></td><td><ul>
-<li><a href="http://adsabs.harvard.edu/abs/2021arXiv210912733S">abstract</a></li>
+<tr><td>2022 Jan</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Automated Detection of Antenna Malfunctions in Large-N Interferometers: A Case Study with the Hydrogen Epoch of Reionization Array</p> <p><span class="pwpubs_auth">Storer et al.</span> • Radio Science 57 e07376</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2022RaSc...5707376S">abstract</a></li>
 <li><a href="http://arxiv.org/abs/2109.12733">preprint</a></li>
 <li><a href="http://dx.doi.org/10.1029/2021RS007376">official</a></li>
+</ul>
+</td></tr>
+<tr><td>2022 Jan</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Validation of the HERA Phase I Epoch of Reionization 21 cm Power Spectrum Software Pipeline</p> <p><span class="pwpubs_auth">Aguirre et al.</span> • ApJ 924 85</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2022ApJ...924...85A">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2104.09547">preprint</a></li>
+<li><a href="http://dx.doi.org/10.3847/1538-4357/ac32cd">official</a></li>
+</ul>
+</td></tr>
+<tr><td>2022 Jan</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">HERA Phase I Limits on the Cosmic 21 cm Signal: Constraints on Astrophysics and Cosmology during the Epoch of Reionization</p> <p><span class="pwpubs_auth">Abdurashidova et al.</span> • ApJ 924 51</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2022ApJ...924...51A">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2108.07282">preprint</a></li>
+<li><a href="http://dx.doi.org/10.3847/1538-4357/ac2ffc">official</a></li>
+</ul>
+</td></tr>
+<tr><td>2022 Jan</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">The Galactic Faraday rotation sky 2020</p> <p><span class="pwpubs_auth">Hutschenreuter et al.</span> • A&amp;A 657 43</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2022A%26A...657A..43H">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2102.01709">preprint</a></li>
+<li><a href="http://dx.doi.org/10.1051/0004-6361/202140486">official</a></li>
+</ul>
+</td></tr>
+<tr><td>2022 Jan</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">A Pilot Radio Search for Magnetic Activity in Directly Imaged Exoplanets</p> <p><span class="pwpubs_auth">Cendes, PKGW, Berger</span> • AJ 163 15</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2022AJ....163...15C">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2106.14994">preprint</a></li>
+<li><a href="http://dx.doi.org/10.3847/1538-3881/ac32c8">official</a></li>
+</ul>
+</td></tr>
+<tr><td>2021 Dec</td><td></td><td class="pwpubs_tauth"><p class="pwpubs_title">JUpiters Global maGnetic Environment and RadiatioN ObservaTory (JUGGERNOT): A Mission to the Solar Systems Greatest Particle Accelerator</p> <p><span class="pwpubs_auth">Clark et al.</span> • AGU Fall Meeting 2021, id. SM22B-06</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2021AGUFMSM22B..06C">abstract</a></li>
+</ul>
+</td></tr>
+<tr><td>2021 Dec</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">A Late-Time Galaxy-Targeted Search for the Radio Counterpart of GW190814</p> <p><span class="pwpubs_auth">Alexander et al.</span> • ApJ 923 66</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2021ApJ...923...66A">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2102.08957">preprint</a></li>
+<li><a href="http://dx.doi.org/10.3847/1538-4357/ac281a">official</a></li>
+</ul>
+</td></tr>
+<tr><td>2021 Nov</td><td></td><td class="pwpubs_tauth"><p class="pwpubs_title">WorldWide Telescope Interactives in Online Astronomy Classes</p> <p><span class="pwpubs_auth">Udomprasert, Houghton, PKGW</span> • ASP Conf. Ser 531 159</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2021ASPC..531..159U">abstract</a></li>
+</ul>
+</td></tr>
+<tr><td>2021 Oct</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Radio Observations of an Ordinary Outflow from the Tidal Disruption Event AT2019dsg</p> <p><span class="pwpubs_auth">Cendes et al.</span> • ApJ 919 127</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2021ApJ...919..127C">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2103.06299">preprint</a></li>
+<li><a href="http://dx.doi.org/10.3847/1538-4357/ac110a">official</a></li>
+</ul>
+</td></tr>
+<tr><td>2021 Sep</td><td></td><td class="pwpubs_tauth"><p class="pwpubs_title"><b>Open Access and AAS Publishing: The Big Picture</b></p> <p><span class="pwpubs_auth">PKGW</span> • BAAS 53 0204</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2021BAAS...53b0204W">abstract</a></li>
+<li><a href="http://dx.doi.org/10.3847/25c2cfeb.ef43785f">official</a></li>
+</ul>
+</td></tr>
+<tr><td>2021 Sep</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Effects of model incompleteness on the drift-scan calibration of radio telescopes</p> <p><span class="pwpubs_auth">Gehlot et al.</span> • MNRAS 506 4578</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2021MNRAS.506.4578G">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2104.12240">preprint</a></li>
+<li><a href="http://dx.doi.org/10.1093/mnras/stab2072">official</a></li>
+</ul>
+</td></tr>
+<tr><td>2021 Aug</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Methods of Error Estimation for Delay Power Spectra in 21 cm Cosmology</p> <p><span class="pwpubs_auth">Tan et al.</span> • ApJS 255 26</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2021ApJS..255...26T">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2103.09941">preprint</a></li>
+<li><a href="http://dx.doi.org/10.3847/1538-4365/ac0533">official</a></li>
+</ul>
+</td></tr>
+<tr><td>2021 Jul</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">A Real Time Processing System for Big Data in Astronomy: Applications to HERA</p> <p><span class="pwpubs_auth">La Plante et al.</span> • Astronomy and Computing, 36 100489</p></td><td><ul>
+<li><a href="http://adsabs.harvard.edu/abs/2021BAAS...53b0204W">abstract</a></li>
+<li><a href="http://arxiv.org/abs/2104.03990">preprint</a></li>
+<li><a href="http://dx.doi.org/10.3847/25c2cfeb.ef43785f">official</a></li>
 </ul>
 </td></tr>
 <tr><td>2021 May</td><td>»</td><td class="pwpubs_tauth"><p class="pwpubs_title">Late-Time Radio and Millimeter Observations of Superluminous Supernovae and Long Gamma Ray Bursts: Implications for Obscured Star Formation, Central Engines, and Fast Radio Bursts</p> <p><span class="pwpubs_auth">Eftekhari et al.</span> • ApJ 912 21</p></td><td><ul>
