templates/index.html: update contact to Mastodon rather than Twitter

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,12 @@
 {% block content %}
 
 <p class="lede">I’m the Innovation Scientist of
-    the <a href="https://cfa.harvard.edu/">Center for Astrophysics</a> and
-    the <a href="https://aas.org/">American Astronomical Society</a>. I help
-    other astronomers do research better and faster. You can find out more on
-    my <a href="{{macros::page_url(path="about-me/index.md")}}">About Me</a> page,
-    and you can contact me <a href="https://twitter.com/pkgw">on Twitter as
-    @pkgw</a> or at <a href="mailto:peter@newton.cx">peter@newton.cx</a>.</p>
+  the <a href="https://cfa.harvard.edu/">Center for Astrophysics</a> and
+  formerly the <a href="https://aas.org/">American Astronomical Society</a>. I help
+  other astronomers do research better and faster. You can find out more on
+  my <a href="{{macros::page_url(path="about-me/index.md")}}">About Me</a> page,
+  and you can find me <a href="https://mastodon.world/@pkgw">on Mastodon as
+    @pkgw@mastodon.world</a> or over email at <a href="mailto:peter@newton.cx">peter@newton.cx</a>.</p>
 
 {% set latest_section = get_section(path="2020/_index.md") %}
 {% for post in latest_section.pages | slice(end=5) %}
