--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 {% if loop.first %}
 
 <hr>
-<p class="index-small-divider">Latest news:</p>
+<p class="index-small-divider">Latest post:</p>
 
 <p class="post-title"><a href="{{ post.permalink | safe }}">{{ post.title }}</a></p>
 <p class="post-date">{{ post.date | date(format="%Y %B %e") }}</p>
