--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
           <li><a href="{{ macros::page_url(path="pubs.md") }}">Publications</a></li>
           <li><a href="{{ macros::page_url(path="cv.md") }}">CV</a></li>
           <li><a href="{{ macros::page_url(path="dissertation.md") }}">Dissertation</a></li>
-          <li><a href="{{ macros::page_url(path="all-posts.md") }}">All News</a></li>
+          <li><a href="{{ macros::page_url(path="all-posts.md") }}">All Posts</a></li>
           <li><a href="{{ macros::section_url(name="howto") }}">How-To Guides</a></li>
         </ul>
       </div>
