Add newsletter signup links to post/howto footers

--- a/templates/howto.html
+++ b/templates/howto.html
@@ -17,6 +17,13 @@
         href="https://mastodon.world/@pkgw">Toot
         me</a>.</em></p>
 
+  <p><em>Want more? Try subscribing to my
+      <a target="_blank" href="https://buttondown.email/pkgw">lightweight
+        newsletter</a> or
+      <a href='{{ get_url(path="", trailing_slash=true) | safe }}rss.xml'>my
+        RSS/Atom feed</a>. No thirsty influencering — just links to what I’m
+      writing.</em></p>
+
   <p><em>See <a href='{{ macros::section_url(name="howto") }}'>a list of all how-to guides</a>.</em></p>
 
   <p><em>On GitHub you
