--- a/templates/page.html
+++ b/templates/page.html
@@ -17,7 +17,7 @@
         href="https://mastodon.world/@pkgw">Toot
         me</a>.</em></p>
 
-  <p><em>Want more? Try subscribing to my
+  <p><em>To get notified of new posts, try subscribing to my
       <a target="_blank" href="https://buttondown.email/pkgw">lightweight
         newsletter</a> or
       <a href='{{ get_url(path="", trailing_slash=true) | safe }}rss.xml'>my
