content/2024/really-fast-websites.md: write this

--- a/templates/page.html
+++ b/templates/page.html
@@ -21,8 +21,9 @@
       <a target="_blank" href="https://buttondown.email/pkgw">lightweight
         newsletter</a> or
       <a href='{{ get_url(path="", trailing_slash=true) | safe }}rss.xml'>my
-        RSS/Atom feed</a>. No thirsty influencering — just links to what I’m
-      writing.</em></p>
+        RSS/Atom feed</a>. No thirsty influencering — you get alerts about what
+      I’m writing; I get warm fuzzies from knowing that someone’s
+      reading!</em></p>
 
   {%- if page.lower -%}
   <p><em>Later:</em> <a href="{{ page.lower.permalink | safe }}">{{ page.lower.title }}</a></p>
