--- a/templates/howto.html
+++ b/templates/howto.html
@@ -21,8 +21,9 @@
       <a target="_blank" href="https://buttondown.email/pkgw">lightweight
         newsletter</a> or
       <a href='{{ get_url(path="", trailing_slash=true) | safe }}rss.xml'>my
-        RSS/Atom feed</a>. No thirsty influencering — just links to what I’m
-      writing.</em></p>
+        RSS/Atom feed</a>. No thirsty influencering — you get alerts about what
+      I’m writing; I get warm fuzzies from knowing that someone’s
+      reading!</em></p>
 
   <p><em>See <a href='{{ macros::section_url(name="howto") }}'>a list of all how-to guides</a>.</em></p>
 
