--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,20 @@
 
 {% block content %}
 
-<p class="lede">I’m the Innovation Scientist of the
-  <a href="https://cfa.harvard.edu/">Center for Astrophysics</a> and formerly
-  the <a href="https://aas.org/">American Astronomical Society</a>. I help other
-  astronomers do research better and faster. You can find out more on my
+<p class="lede">I’m a researcher at the
+  <a rel="noopener" target="_blank" href="https://cfa.harvard.edu/">Center for
+    Astrophysics | Harvard &amp; Smithsonian</a>. I build systems for
+  astrophysical data analysis and
+
+
+  I think about, write about, and
+  <i>create</i> the tools and infrastructures that enable 21st century science.
+
+
+
+
+</p>
+<p>You can find out more on my
   <a href='{{macros::page_url(path="about-me/index.md")}}'>About Me</a> page,
   and you can find me
   <a href="https://mastodon.world/@pkgw">on Mastodon as @pkgw@mastodon.world</a>
